--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,8 +12,8 @@
   <script src="lib/jasmine-2.2.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/BowlingGame.js"></script>
-  <script src="src/BowlingFrame.js"></script>
+  <script src="models/BowlingGame.js"></script>
+  <script src="models/BowlingFrame.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
