Outsourced setupGame into helper Service

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -22,15 +22,19 @@
   
   <script src=".grunt/grunt-contrib-jasmine/boot.js"></script>
   
-  <script src=".grunt/grunt-contrib-jasmine/bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
   
-  <script src=".grunt/grunt-contrib-jasmine/bower_components/angular-mocks/angular-mocks.js"></script>
+  <script src="bower_components/angular-mocks/angular-mocks.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/public/js/app.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/public/js/models/BowlingFrame.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/public/js/models/BowlingGame.js"></script>
+  
+  <script src=".grunt/grunt-contrib-jasmine/public/js/helpers/rangeFilter.js"></script>
+  
+  <script src=".grunt/grunt-contrib-jasmine/public/js/helpers/setupGameService.js"></script>
   
   <script src="spec/unit/BowlingFrameSpec.js"></script>
   
